--- a/.github/workflows/docker_build.jinja
+++ b/.github/workflows/docker_build.jinja
@@ -2,7 +2,7 @@
 name: '{{ wf.software }}'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ '{{' }} github.workflow {{ '}}' }}-${{ '{{' }} github.ref {{ '}}' }}
   cancel-in-progress: true
 
 on:
