--- a/.github/workflows/docker_build.jinja
+++ b/.github/workflows/docker_build.jinja
@@ -7,9 +7,7 @@ concurrency:
 
 on:
   push:
-    branches: ["*"]
-  pull_request:
-    branches: ["*"]
+    branches: ["test_docker_build"]
 
 # Uses the cron schedule for github actions
 #
